# crime-data-analyzer

./: .gitignore  README.md  pyproject.toml
data/input/: policies_crimes.gv
docs/: metodologia.tex
src/analyzer/: correlation.py
src/budget_data/: client.py  config.py  models.py
src/crime_data/: analysis.py  builder.py  cli.py  config.py  loader.py  main.py  models.py  plotter.py  reporter.py  scorer.py  serializer.py
src/crime_data_analyzer/: analysis.py  builder.py  cli.py  config.py  data_manager.py  main.py  models.py  plotter.py  reporter.py  serializer.py
src/utils/: api.py  log.py
tests/: test_data.py
