[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crime-data-analyzer"
version = "0.1.0"
authors = [
    { name="Pedro Volpi Nacif", email="pedro.volpi@tcu.gov.br" },
]
description = "Ferramenta para auxiliar a escolha de objeto de auditoria em segurança pública."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "fastparquet",
    "regex",
    "openpyxl",
    "matplotlib",
    "seaborn",
    "requests",
    "dotenv",
    "pydantic[email]",
    "networkx",
]

[project.scripts]
analyze-crime-data = "crime_data_analyzer.main:run"

# Black and Ruff share a line-length setting
[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true
known_first_party = ["crime_data_analyzer"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "T"]
ignore = ["E501"] # Ignored because Black/Ruff formatting handles line length
fix = true

[tool.mypy]
python_version = "3.12"
strict = true
# CRITICAL: These flags are needed for return type checking
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_no_return = true
no_implicit_optional = true
# Additional strictness
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_error_codes = true

# Para projetos com src layout
files = ["src"]
explicit_package_bases = true
namespace_packages = true

[project.optional-dependencies]
dev = [
    "pytest",
    "tqdm",
    "types-requests",
    "types-setuptools",
    "pandas-stubs",
    "types-regex", 
    "types-seaborn",
    "types-openpyxl",
    "types-networkx",
    "pandas-stubs",
]
